--- a/product.html
+++ b/product.html
@@ -12,7 +12,6 @@
       color: #111;
       margin: 0;
     }
-
     header.main-header {
       background: #101011;
       color: #fff;
@@ -21,7 +20,6 @@
       font-size: 20px;
       letter-spacing: 0.5px;
     }
-
     main {
       max-width: 1200px;
       margin: 60px auto;
@@ -31,8 +29,6 @@
       gap: 40px;
       align-items: flex-start;
     }
-
-    /* --- IMAGE AREA --- */
     .product-gallery {
       flex: 1 1 55%;
       background: #fff;
@@ -43,16 +39,13 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
       position: relative;
     }
-
     .product-gallery img#product-image {
       width: 100%;
       height: 500px;
       object-fit: contain;
       border-radius: 10px;
       background: #f6f6f6;
-      transition: transform 0.3s ease;
     }
-
     .badge {
       position: absolute;
       top: 20px;
@@ -66,7 +59,32 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .badge.new { background: #00b894; }
-
+    .favorite-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      width: 38px;
+      height: 38px;
+      padding: 0;
+      transition: transform 0.25s ease;
+    }
+    .favorite-btn svg {
+      width: 100%;
+      height: 100%;
+      fill: none;
+      stroke: #aaa;
+      stroke-width: 2;
+      transition: fill 0.25s ease, stroke 0.25s ease;
+    }
+    .favorite-btn:hover svg { stroke: #e63946; }
+    .favorite-btn.active svg {
+      fill: #e63946;
+      stroke: #e63946;
+      transform: scale(1.05);
+    }
     .thumbnail-container {
       display: flex;
       justify-content: center;
@@ -74,7 +92,6 @@
       margin-top: 20px;
       flex-wrap: wrap;
     }
-
     .thumbnail-container img {
       width: 80px;
       height: 80px;
@@ -84,32 +101,10 @@
       cursor: pointer;
       transition: transform 0.2s ease, border-color 0.2s ease;
     }
-
     .thumbnail-container img:hover {
       transform: scale(1.05);
       border-color: #000;
     }
-
-    /* --- FAVORITE BUTTON --- */
-    .favorite-btn {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      font-size: 28px;
-      background: none;
-      border: none;
-      cursor: pointer;
-      color: #ccc;
-      transition: color 0.2s ease, transform 0.2s ease;
-    }
-    .favorite-btn:hover {
-      transform: scale(1.1);
-    }
-    .favorite-btn.active {
-      color: #e63946;
-    }
-
-    /* --- PRODUCT DETAILS --- */
     .product-details {
       flex: 1 1 40%;
       background: #fff;
@@ -118,27 +113,14 @@
       padding: 36px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
-
     .product-details h1 {
       font-size: 32px;
       font-weight: 800;
       margin: 0 0 10px;
       line-height: 1.2;
     }
-
-    .product-meta {
-      color: #666;
-      font-size: 14px;
-      margin-bottom: 18px;
-      line-height: 1.5;
-    }
-
-    .product-price {
-      font-size: 24px;
-      font-weight: 700;
-      margin-bottom: 20px;
-    }
-
+    .product-meta { color: #666; font-size: 14px; margin-bottom: 18px; line-height: 1.5; }
+    .product-price { font-size: 24px; font-weight: 700; margin-bottom: 20px; }
     .buy-button {
       display: inline-block;
       margin-top: 10px;
@@ -151,146 +133,40 @@
       transition: background 0.3s;
     }
     .buy-button:hover { background: #333; }
-
-    .product-description {
-      margin-top: 20px;
-      font-size: 15px;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    .rating {
-      margin-top: 15px;
-      font-size: 14px;
-      color: #f1c40f;
-    }
-
-    .back-link {
-      display: inline-block;
-      margin-top: 30px;
-      color: #000;
-      text-decoration: underline;
-      font-size: 14px;
-    }
-
-    /* --- MOBILE --- */
+    .product-description { margin-top: 20px; font-size: 15px; color: #333; line-height: 1.6; }
+    .rating { margin-top: 15px; font-size: 14px; color: #f1c40f; }
+    .back-link { display: inline-block; margin-top: 30px; color: #000; text-decoration: underline; font-size: 14px; }
     @media (max-width: 768px) {
-      main {
-        flex-direction: column;
-        padding: 20px 16px;
-      }
-      .product-gallery img#product-image {
-        height: 320px;
-      }
-      .product-details {
-        padding: 24px;
-      }
-      .product-details h1 {
-        font-size: 26px;
-      }
-      .product-price {
-        font-size: 22px;
-      }
-      .thumbnail-container img {
-        width: 60px;
-        height: 60px;
-      }
+      main { flex-direction: column; padding: 20px 16px; }
+      .product-gallery img#product-image { height: 320px; }
+      .product-details { padding: 24px; }
+      .product-details h1 { font-size: 26px; }
+      .product-price { font-size: 22px; }
+      .thumbnail-container img { width: 60px; height: 60px; }
     }
-    .favorite-btn {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 32px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: #bbb;
-  transition: color 0.2s ease, transform 0.2s ease;
-}
-
-.favorite-btn:hover {
-  transform: scale(1.1);
-  color: #e63946;
-}
-
-
-/* --- SVG FAVORITE BUTTON (animasjon + fyll) --- */
-.favorite-btn {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  width: 38px;
-  height: 38px;
-  padding: 0;
-  transition: transform 0.25s ease;
-}
-.favorite-btn svg {
-  width: 100%;
-  height: 100%;
-  fill: none;
-  stroke: #aaa;
-  stroke-width: 2;
-  transition: fill 0.25s ease, stroke 0.25s ease;
-}
-.favorite-btn:hover svg {
-  stroke: #e63946;
-}
-.favorite-btn.active svg {
-  fill: #e63946;
-  stroke: #e63946;
-  transform: scale(1.05);
-}
-.favorite-btn:active {
-  transform: scale(1.15);
-}
-
-  /* --- MOBILFIX: forhindrer horisontal scrolling --- */
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
-.product-gallery, .product-details {
-  width: 100%;
-  max-width: 100%;
-}
-
-.product-gallery img#product-image {
-  width: 100%;
-  height: auto;
-  max-height: 420px;
-}
-  /* --- FAVORITT POPUP --- */
-.fav-popup {
-  position: fixed;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #000;
-  color: #fff;
-  padding: 12px 22px;
-  border-radius: 8px;
-  font-size: 15px;
-  font-weight: 600;
-  letter-spacing: 0.3px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.25);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.4s ease;
-  z-index: 9999;
-}
-.fav-popup.show {
-  opacity: 1;
-}
-
+    .fav-popup {
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #000;
+      color: #fff;
+      padding: 12px 22px;
+      border-radius: 8px;
+      font-size: 15px;
+      font-weight: 600;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.4s ease;
+      z-index: 9999;
+    }
+    .fav-popup.show { opacity: 1; }
   </style>
 </head>
 <body>
 
-  <header class="main-header">
+<header class="main-header">
   <a class="logo" href="index.html">BrandRadar</a>
   <nav class="top-nav">
     <a href="index.html">Home</a>
@@ -300,225 +176,89 @@ html, body {
   </nav>
 </header>
 
+<main>
+  <div class="product-gallery">
+    <span id="product-badge" class="badge"></span>
+    <button id="favorite-btn" class="favorite-btn" title="Legg til i favoritter">
+      <svg viewBox="0 0 24 24"><path d="M12 21s-7-4.35-10-8.87C-1.33 8.24 1.42 3 6.6 3 9.07 3 12 5.09 12 5.09S14.93 3 17.4 3c5.18 0 7.93 5.24 4.6 9.13C19 16.65 12 21 12 21z"/></svg>
+    </button>
+    <img id="product-image" src="" alt="Produktbilde">
+    <div class="thumbnail-container" id="thumbnail-container"></div>
+  </div>
+  <div class="product-details">
+    <h1 id="product-title"></h1>
+    <div id="product-brand" class="product-meta"></div>
+    <div id="product-category" class="product-meta"></div>
+    <div id="product-price" class="product-price"></div>
+    <div id="product-rating" class="rating"></div>
+    <a id="buy-button" class="buy-button" href="#" target="_blank">Kjøp nå</a>
+    <div id="product-description" class="product-description"></div>
+    <a href="index.html" class="back-link">← Tilbake</a>
+  </div>
+</main>
 
-  <main>
-    <div class="product-gallery">
-      <span id="product-badge" class="badge"></span>
-      <button id="favorite-btn" class="favorite-btn" title="Legg til i favoritter" aria-label="Favoritt">
-  <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M12 21s-7-4.35-10-8.87C-1.33 8.24 1.42 3 6.6 3 9.07 3 12 5.09 12 5.09S14.93 3 17.4 3c5.18 0 7.93 5.24 4.6 9.13C19 16.65 12 21 12 21z"/>
-  </svg>
-</button>
+<div id="fav-popup" class="fav-popup"></div>
 
-      <img id="product-image" src="" alt="Produktbilde">
-      <div class="thumbnail-container" id="thumbnail-container"></div>
-    </div>
-
-    <div class="product-details">
-      <h1 id="product-title">Produktnavn</h1>
-      <div id="product-brand" class="product-meta"></div>
-      <div id="product-category" class="product-meta"></div>
-      <div id="product-price" class="product-price"></div>
-      <div id="product-rating" class="rating"></div>
-      <a id="buy-button" class="buy-button" href="#" target="_blank">Kjøp nå</a>
-      <div id="product-description" class="product-description"></div>
-      <a href="index.html" class="back-link">← Tilbake</a>
-    </div>
-  </main>
-
-  <script>
-    const data = localStorage.getItem("selectedProduct");
-
-    if (data) {
-      const p = JSON.parse(data);
-
-      // sett hovedinfo
-      document.getElementById("product-image").src = p.image;
-      document.getElementById("product-title").textContent = p.title;
-      document.getElementById("product-brand").textContent = "Brand: " + p.brand;
-      document.getElementById("product-category").textContent = `${p.gender} • ${p.subcategory}`;
-      document.getElementById("product-price").textContent = "Pris: " + p.price;
-      document.getElementById("buy-button").href = p.link;
-
-      // beskrivelse og rating
-      if (p.description) {
-        document.getElementById("product-description").textContent = p.description;
+<script>
+  const key = "favorites";
+  function popup(msg){
+    const p=document.getElementById("fav-popup");
+    p.textContent=msg;p.classList.add("show");
+    setTimeout(()=>p.classList.remove("show"),1500);
+  }
+  function updateFavCount(){
+    const c=JSON.parse(localStorage.getItem(key)||"[]").length;
+    document.querySelectorAll("[data-fav-count]").forEach(el=>el.textContent=c);
+  }
+  const d=localStorage.getItem("selectedProduct");
+  if(d){
+    const p=JSON.parse(d);
+    product_image.src=p.image;
+    product_title.textContent=p.title;
+    product_brand.textContent="Brand: "+(p.brand||"");
+    product_category.textContent=`${p.gender||""} • ${p.subcategory||""}`;
+    product_price.textContent="Pris: "+(p.price||"");
+    buy_button.href=p.link||"#";
+    if(p.description)product_description.textContent=p.description;
+    if(p.rating)product_rating.textContent="⭐ "+p.rating;
+    const b=document.getElementById("product-badge");
+    if(p.discount){
+      const t=String(p.discount).replace(/["%]/g,"").trim();
+      const n=/nyhet|new/i.test(t);
+      b.textContent=n?"Nyhet!":"Discount: "+t+"%";
+      if(n)b.classList.add("new");
+    }else b.style.display="none";
+    const f=document.getElementById("favorite-btn");
+    let favs=JSON.parse(localStorage.getItem(key)||"[]");
+    if(favs.some(x=>x.title===p.title))f.classList.add("active");
+    f.addEventListener("click",()=>{
+      let list=JSON.parse(localStorage.getItem(key)||"[]");
+      const ex=list.some(x=>x.title===p.title);
+      if(ex){
+        list=list.filter(x=>x.title!==p.title);
+        f.classList.remove("active");
+        popup("Fjernet fra favoritter ❌");
+      }else{
+        list.push(p);
+        f.classList.add("active");
+        popup("Lagt til i favoritter ❤️");
       }
-      if (p.rating) {
-        document.getElementById("product-rating").textContent = "⭐ " + p.rating;
-      }
-
-      // badge
-      const badge = document.getElementById("product-badge");
-      if (p.discount) {
-        const cleanText = p.discount.replace(/["%]/g, "").trim();
-        const isNew = /nyhet|new/i.test(cleanText);
-        badge.textContent = isNew ? "Nyhet!" : "Discount: " + cleanText + "%";
-        if (isNew) badge.classList.add("new");
-      } else {
-        badge.style.display = "none";
-      }
-
-   // --- FAVORITTKNAPP + POPUP + OPPDATERING ---
-const favBtn = document.getElementById("favorite-btn");
-const favoritesKey = "favorites";
-
-// popup-element
-function showFavPopup(message) {
-  const popup = document.getElementById("fav-popup");
-  popup.textContent = message;
-  popup.classList.add("show");
-  setTimeout(() => popup.classList.remove("show"), 1500);
-}
-
-// Oppdater antall i header
-function updateFavCount() {
-  const count = JSON.parse(localStorage.getItem(favoritesKey) || "[]").length;
-  document.querySelectorAll("[data-fav-count]").forEach(el => el.textContent = count);
-}
-
-// Les eksisterende favoritter
-let favorites = JSON.parse(localStorage.getItem(favoritesKey) || "[]");
-let isFavorite = favorites.some(f => f.title === p.title);
-if (isFavorite) favBtn.classList.add("active");
-
-// Klikk på hjerte
-favBtn.addEventListener("click", () => {
-  let favorites = JSON.parse(localStorage.getItem(favoritesKey) || "[]");
-  const alreadyFav = favorites.some(f => f.title === p.title);
-
-  if (alreadyFav) {
-  // Fjern produkt
-  favorites = favorites.filter(f => f.title !== p.title);
-  favBtn.classList.remove("active");
-  favBtn.title = "Legg til i favoritter";
-  localStorage.setItem(favoritesKey, JSON.stringify(favorites));
-  window.dispatchEvent(new Event("favoritesChanged"));
+      localStorage.setItem(key,JSON.stringify(list));
+      updateFavCount();
+    });
+    const thumbs=document.getElementById("thumbnail-container");
+    [p.image,p.image2,p.image3,p.image4].filter(Boolean).forEach((img,i)=>{
+      const t=document.createElement("img");
+      t.src=img;if(i===0)t.style.borderColor="#000";
+      t.addEventListener("click",()=>{
+        document.getElementById("product-image").src=img;
+        document.querySelectorAll(".thumbnail-container img").forEach(x=>x.style.borderColor="transparent");
+        t.style.borderColor="#000";
+      });
+      thumbs.appendChild(t);
+    });
+  }
   updateFavCount();
-  showFavPopup("Fjernet fra favoritter ❌");
-} else {
-  // Legg til produkt
-  favorites.push(p);
-  favBtn.classList.add("active");
-  favBtn.title = "Fjern fra favoritter";
-  localStorage.setItem(favoritesKey, JSON.stringify(favorites));
-  window.dispatchEvent(new Event("favoritesChanged"));
-  updateFavCount();
-  showFavPopup("Lagt til i favoritter ❤️");
-}
-
-
-      // thumbnails (inkluder hovedbilde først)
-      const thumbs = document.getElementById("thumbnail-container");
-      const allImages = [p.image, p.image2, p.image3, p.image4].filter(Boolean);
-      allImages.forEach((img, index) => {
-        const thumb = document.createElement("img");
-        thumb.src = img;
-        thumb.alt = "Produktbilde";
-        if (index === 0) thumb.style.borderColor = "#000";
-        thumb.addEventListener("click", () => {
-          document.getElementById("product-image").src = img;
-          document.querySelectorAll(".thumbnail-container img").forEach(t => t.style.borderColor = "transparent");
-          thumb.style.borderColor = "#000";
-        });
-        thumbs.appendChild(thumb);
-      });
-
-    } else {
-      document.querySelector("main").innerHTML =
-        "<p>Fant ikke produktdata. Gå tilbake til forsiden.</p>";
-    }
-  </script>
-
-    <!-- Popup-elementet -->
-  <div id="fav-popup" class="fav-popup"></div>
-
-  <script>
-    const data = localStorage.getItem("selectedProduct");
-    const favoritesKey = "favorites";
-
-    // --- POPUP ---
-    function showFavPopup(message) {
-      const popup = document.getElementById("fav-popup");
-      popup.textContent = message;
-      popup.classList.add("show");
-      setTimeout(() => popup.classList.remove("show"), 1500);
-    }
-
-    // --- TELLER ---
-    function updateFavCount() {
-      const count = JSON.parse(localStorage.getItem(favoritesKey) || "[]").length;
-      document.querySelectorAll("[data-fav-count]").forEach(el => el.textContent = count);
-    }
-
-    if (data) {
-      const p = JSON.parse(data);
-
-      // Fyll produktinfo
-      document.getElementById("product-image").src = p.image;
-      document.getElementById("product-title").textContent = p.title;
-      document.getElementById("product-brand").textContent = "Brand: " + p.brand;
-      document.getElementById("product-category").textContent = `${p.gender} • ${p.subcategory}`;
-      document.getElementById("product-price").textContent = "Pris: " + p.price;
-      document.getElementById("buy-button").href = p.link;
-      if (p.description) document.getElementById("product-description").textContent = p.description;
-      if (p.rating) document.getElementById("product-rating").textContent = "⭐ " + p.rating;
-
-      // Badge
-      const badge = document.getElementById("product-badge");
-      if (p.discount) {
-        const clean = p.discount.replace(/["%]/g, "").trim();
-        const isNew = /nyhet|new/i.test(clean);
-        badge.textContent = isNew ? "Nyhet!" : "Discount: " + clean + "%";
-        if (isNew) badge.classList.add("new");
-      } else {
-        badge.style.display = "none";
-      }
-
-      // --- FAVORITTKNAPP ---
-      const favBtn = document.getElementById("favorite-btn");
-      let favorites = JSON.parse(localStorage.getItem(favoritesKey) || "[]");
-      const isFavorite = favorites.some(f => f.title === p.title);
-      if (isFavorite) favBtn.classList.add("active");
-
-      favBtn.addEventListener("click", () => {
-        let favorites = JSON.parse(localStorage.getItem(favoritesKey) || "[]");
-        const alreadyFav = favorites.some(f => f.title === p.title);
-
-        if (alreadyFav) {
-          favorites = favorites.filter(f => f.title !== p.title);
-          favBtn.classList.remove("active");
-          favBtn.title = "Legg til i favoritter";
-          showFavPopup("Fjernet fra favoritter ❌");
-        } else {
-          favorites.push(p);
-          favBtn.classList.add("active");
-          favBtn.title = "Fjern fra favoritter";
-          showFavPopup("Lagt til i favoritter ❤️");
-        }
-
-        localStorage.setItem(favoritesKey, JSON.stringify(favorites));
-        updateFavCount();
-      });
-
-      // Thumbnails
-      const thumbs = document.getElementById("thumbnail-container");
-      const allImages = [p.image, p.image2, p.image3, p.image4].filter(Boolean);
-      allImages.forEach((img, index) => {
-        const thumb = document.createElement("img");
-        thumb.src = img;
-        thumb.alt = "Produktbilde";
-        if (index === 0) thumb.style.borderColor = "#000";
-        thumb.addEventListener("click", () => {
-          document.getElementById("product-image").src = img;
-          document.querySelectorAll(".thumbnail-container img").forEach(t => t.style.borderColor = "transparent");
-          thumb.style.borderColor = "#000";
-        });
-        thumbs.appendChild(thumb);
-      });
-    }
-
-    updateFavCount();
-  </script>
+</script>
 </body>
 </html>
